support hbase1.0, hdfs 2.5

--- a/collector/src/main/resources/pinpoint-collector.properties
+++ b/collector/src/main/resources/pinpoint-collector.properties
@@ -27,6 +27,6 @@ collector.udpSpanSocketReceiveBufferSize=4194304
 
 statistics.flushPeriod=1000
 
-cluster.enable=false
-cluster.zookeeper.address=
-cluster.zookeeper.sessiontimeout=
+cluster.enable=true
+cluster.zookeeper.address=10.255.12.167:2181,10.255.12.168:2181
+cluster.zookeeper.sessiontimeout=60000
