--- a/web/pom.xml
+++ b/web/pom.xml
@@ -528,6 +528,12 @@
             <version>2.6.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
         
     </dependencies>
 
